--- a/hackathon/Dockerfile
+++ b/hackathon/Dockerfile
@@ -7,3 +7,6 @@ RUN CGO_ENABLED=0 go build -o /go/bin/app
 FROM gcr.io/distroless/static-debian11
 COPY --from=build /go/bin/app /
 CMD ["/app"]
+
+#docker build -t hackathon hackathon
+#docker run -p 8000:8000 hackathon
